Bug 1674369 - Backed out changeset (Bug 288154) for encoding pipe character in URL query parser r=valentin,emk

bug 1674369

Differential Revision: https://phabricator.services.mozilla.com/D182064